    continusouly updated w/o flicker.  This example is meant to
    simulate a system monitor that shows free CPU, RAM, etc...
	
2003-08-04

    Added Jon Anderson's GTK shell, which doesn't require pygtk to
    have threading built-in and looks nice!

2003-08-25
   
   Fixed deprecation warnings for python2.3 and pygtk-1.99.18

2003-08-26

   Added figure text with new example examples/figtext.py


2003-08-27
  
   Fixed bugs i figure text with font override dictionairies and fig
   text that was placed outside the window bounding box

2003-09-1 thru 2003-09-15  

   Added a postscript and a GD module backend

2003-09-16

   Fixed font scaling and point scaling so circles, squares, etc on
   lines will scale with DPI as will fonts.  Font scaling is not fully
   implemented on the gtk backend because I have not figured out how
   to scale fonts to arbitrary sizes with GTK

2003-09-17 
 
   Fixed figure text bug which crashed X windows on long figure text
   extending beyond display area.  This was, I believe, due to the
   vestigial erase functionality that was no longer needed since I
   began rendering to a pixmap

2003-09-30  Added legend

2003-10-01 Fixed bug when colors are specified with rgb tuple or hex
   string.


2003-10-21  Andrew Straw provided some legend code which I modified
      and incorporated.  Thanks Andrew!

2003-10-27 Fixed a bug in axis.get_view_distance that affected zoom in
  versus out with interactive scrolling, and a bug in the axis text
  reset system that prevented the text from being redrawn on a
  interactive gtk view lim set with the widget
 
  Fixed a bug in that prevented the manual setting of ticklabel
  strings from working properly

2003-11-02 
   - Added pcolor plot
   - Added MRI example
   - Fixed bug that screwed up label position if xticks or yticks were
     empty
   - added nearest neighbor color picker when GD max colors exceeded
   - fixed figure background color bug in GD backend
