@@ -16,7 +16,7 @@ win.add(vbox)
 vbox.show()
 
 f = Figure(figsize=(5,4), dpi=100)
-a = Subplot(111)
+a = Subplot(f, 111)
 t = numpy.arange(0.0,3.0,0.01)
 s = numpy.sin(2*numpy.pi*t)
 
