@@ -6,5 +6,7 @@ plot(t, s)
 xlabel('time (s)')
 ylabel('voltage (mV)')
 title('About as simple as it gets, folks')
+grid(True)
+#set(gca(), 'xticks', (0,.2,.7))
 savefig('simple_plot')
 show()
